--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -135,6 +135,13 @@ p
     font-size: em(12px)
     margin-bottom: 12px
 
+.info
+    color: $accent-color !important
+.success
+    color: $green-color !important
+.danger
+    color: $red-color !important
+
 // Images
 img, .image
     display: inline-block
@@ -164,6 +171,13 @@ i, .fa
 .dark-section
     background: $dark-color
     color: #ffffff
+
+// Delimiter
+.delimiter
+    border-top: 1px solid #eeeeee
+    border-bottom: 1px solid #ffffff
+    display: inline-block
+    width: 100%
 
 // Menus
 .menu
