--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -8,6 +8,8 @@ $accent-color-dark: #0079bf
 
 $dark-color: #273849
 $grey-color: #9a9da0 // #929597
+$green-color: #26b713
+$red-color: #b71332
 
 $light-gradient-colors: #f6f9fa 0%, #f9f9fa 25%, #eeeeee 80%, #ececed 100%
 
