--- a/app/header.sass
+++ b/app/header.sass
@@ -6,13 +6,13 @@
 
 // HeaderWidger
 #header-widget
-    padding: 5px 0
-    line-height: 40px
+    padding: 0
+    line-height: 50px
     font-size: em(14px)
 
     ul
         display: inline-block
-        height: 40px
+        height: 50px
         li
             display: inline-block
             margin-right: 25px
@@ -22,12 +22,178 @@
         color: #ffffff
         float: left
         font-size: 20px
-        line-height: 40px
+        line-height: 50px
         margin-right: 7px
 
     .user-panel
+        div
+            float: left
+        i, .fa
+            margin: 0
+            color: $grey-color
+        a
+            float: left
+            margin: 0 5px
+            padding: 0 10px
+            position: relative
+            &.active, &:hover
+                i, .fa
+                    color: #ffffff
+        .notification
+            i, .fa
+                color: $green-color
+            &.active, &:hover
+                i, .fa
+                    color: #ffffff
+            &:after
+                content: ""
+                width: 8px
+                height: 8px
+                border-radius: 50%
+                background: $green-color
+                position: absolute
+                right: 0
+                top: 11px
+                border: 3px solid $dark-color
+                box-sizing: content-box
+        .notifications .notification:after
+                right: 7px
+        .notifications .letters:after
+                right: 2px
+        .active a
+            i, .fa
+                color: #ffffff
         .avatar
             width: 40px
+            height: 40px
+            margin: 5px 15px 0 0
+            border-radius: 5px
+        .dropdown
+            &.active
+                > a
+                    i, .fa
+                        &:after
+                            content: ""
+                            width: 12px
+                            height: 12px
+                            background: #f9f9f9
+                            transform: rotate(45deg)
+                            position: absolute
+                            bottom: -6px
+                            right: 14px
+                .dropdown-container
+                    display: block
+            &.user.active
+                > a
+                    i, .fa
+                        &:after
+                            right: 12px
+        .dropdown-container
+            display: none
+            position: absolute
+            z-index: 9999
+            top: 50px
+            right: 0
+            width: 314px
+            background-color: #f9f9f9
+            border: 1px solid #ffffff
+            border-top: none
+            border-radius: 0 0 3px 3px
+            color: $dark-color
+            line-height: 1
+            padding: 10px 0
+            .container-header,
+            .container-body
+                display: inline-block
+                width: 100%
+            .container-header
+                padding: 5px 11px 10px
+                text-align: center
+                .title
+                    line-height: 20px
+                a
+                    span
+                        text-decoration: underline
+            .container-body
+                padding: 0px 6px
+            a
+                display: inline-block
+                float: none
+                color: $dark-color
+                margin: 0
+                padding: 0
+            a i, a .fa, i, .fa
+                float: none
+                line-height: 1
+                color: $dark-color
+                margin-right: 7px
+            a i, a .fa, a span
+                line-height: 20px
+                float: left
+            ul
+                height: auto
+            .list
+                padding: 5px 0
+                li
+                    width: 100%
+                    position: relative
+                    padding: 7px 0
+                    border-top: 1px solid #ffffff
+                    border-bottom: 1px solid #eeeeee
+                    &:first-child
+                        border-top: none
+                    &:last-child
+                        border-bottom: none
+                    a:first-child
+                        position: relative
+                        padding: 0 30px 0 45px
+                        display: inline-block
+                        width: 100%
+                        > i, > .fa
+                            float: left
+                            margin: 0 15px 0 5px
+                            position: absolute
+                            left: 8px
+                            top: 2px
+                    a.delete-button
+                        position: absolute
+                        top: 7px
+                        right: 0
+                        > i, > .fa
+                            color: $grey-color
+                            font-size: 14px
+                            padding: 0 5px
+                    .date, .text
+                        display: inline-block
+                        width: 100%
+                    .date
+                        color: $grey-color
+                        font-size: 10px
+                    .text
+                        font-size: 12px
+            .user-menu
+                float: left
+                li
+                    float: left
+                    width: 90px
+                    margin: 5px
+                    padding: 10px 0
+                    text-align: center
+                    a
+                        display: inline-block
+                        width: 100%
+                        opacity: 0.6
+                        span
+                            display: inline-block
+                            width: 100%
+                            float: none
+                            margin-top: 10px
+                        i, .fa
+                            float: none
+                            font-size: 24px
+                    &.active a, a:hover, a:focus
+                        opacity: 1
+
 
 // End HeaderWidger
 
@@ -45,7 +211,7 @@
     .contact-menu
         margin-top: 40px
     .social-links
-        margin-top: 25px
+        margin-top: 30px
 
     .info-menu
         margin: 15px 0
@@ -61,6 +227,7 @@
     display: inline-block
     width: 100%
     background: linear-gradient(to top, $light-gradient-colors)
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1)
     border: 1px solid #f9f9f9
     border-bottom: none
     border-radius: 3px
@@ -72,12 +239,17 @@
         position: relative
         li
             float: left
-            padding: 14px 20px
+            padding: 11px 20px
+            border-bottom: 1px solid #f9f9f9
             border-right: 1px solid #fff
             border-left: 1px solid #eee
-            border-bottom: 1px solid #f9f9f9
+            &:first-child
+                border-left: none
+            &:last-child
+                border-right: none
             i.fa
-                margin-left: 10px
+                margin-left: 7px
+                margin-right: 0
             a
                 font-size: em(18px)
                 color: #333
@@ -89,7 +261,7 @@
                 display: none
                 position: absolute
                 z-index: 999
-                top: 59px
+                top: 54px
                 margin-left: -20px
                 background: linear-gradient(to bottom, $light-gradient-colors)
                 border-radius: 0 0 2px 2px
@@ -116,7 +288,7 @@
 
     // search
     .search-form
-        margin: 12px 20px 0 0
+        margin: 10px 20px 0 0
         input, button
             border: none
             background: none
