--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,6 +2,59 @@
 @import "vars"
 @import "libs"
 
+// Slideout.js Menu
+body
+    width: 100%
+    height: 100%
+.slideout-menu
+    position: fixed
+    left: auto
+    top: 0
+    bottom: 0
+    right: 0
+    z-index: 0
+    width: 256px
+    overflow-y: auto
+    -webkit-overflow-scrolling: touch
+    display: none
+
+.slideout-panel
+    position: relative
+    z-index: 1
+    will-change: transform
+
+.slideout-open,
+.slideout-open body,
+.slideout-open .slideout-panel
+    overflow: hidden
+
+.slideout-open .slideout-menu
+    display: block
+
+.slideout-open .slideout-panel
+
+#menu
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 1)
+    padding: 12px 20px 20px
+    .menu-close-button
+        position: absolute
+        top: 7px
+        right: 10px
+        svg
+            width: 30px
+            .close-x
+                stroke: $grey-color
+                fill: transparent
+                stroke-linecap: round
+                stroke-width: 4
+    .title
+        display: inline-block
+        width: 100%
+        color: $grey-color
+        margin: 15px 0 8px
+        &:first-child
+            margin-top: 0
+
 //Custom styles here
 
 // Footer
