--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -7,7 +7,8 @@ $accent-color: #0095d8
 $accent-color-dark: #0079bf
 
 $dark-color: #273849
-$grey-color: #9a9da0 // #929597
+$gray-color: #9a9da0 // #929597
+$dark-gray-color: #808080
 $green-color: #26b713
 $red-color: #b71332
 
