--- a/app/header.sass
+++ b/app/header.sass
@@ -11,7 +11,6 @@
     font-size: em(14px)
 
     ul
-        display: inline-block
         height: 50px
         li
             display: inline-block
@@ -35,7 +34,7 @@
             position: relative
             i, .fa
                 margin: 0
-                color: $grey-color
+                color: $gray-color
             &.active, &:hover
                 i, .fa
                     color: #ffffff
@@ -66,7 +65,6 @@
         .avatar
             width: 40px
             margin: 5px 15px 0 0
-            border-radius: 5px
         .dropdown
             &.active
                 > a
@@ -111,6 +109,8 @@
                 line-height: 20px
                 .title
                     float: left
+                    i, .fa
+                        margin-right: 7px
             .container-body
                 padding: 0px 6px
             a
@@ -155,7 +155,7 @@
                         top: 7px
                         right: 0
                         > i, > .fa
-                            color: $grey-color
+                            color: $gray-color
                             font-size: 14px
                             padding: 0 5px
                     .avatar
@@ -168,7 +168,7 @@
                         display: inline-block
                         width: 100%
                     .small-text
-                        color: $grey-color
+                        color: $gray-color
                         font-size: 10px
                     .text
                         font-size: 12px
@@ -308,7 +308,7 @@
         input
             height: 30px
             font-size: em(18px)
-            border-bottom: 1px solid $grey-color
+            border-bottom: 1px solid $gray-color
             padding-right: 3px
             &:hover, &:focus, &:active,
             &:hover ~ button, &:focus ~ button, &:active ~ button
@@ -319,3 +319,20 @@
             i, .fa
                 font-size: 30px
 // End Main Menu
+
+// Breadcrumbs
+.breadcrumbs
+    font-size: em(14px)
+    margin-bottom: 5px
+    > li, > a
+        float: left
+        margin-right: 10px
+        &:after
+            font-family: "FontAwesome"
+            content: "\f101" // fa-angle-double-right
+            margin-left: 10px
+        &:last-child
+            margin-right: 0
+    a
+        color: $dark-color
+        text-decoration: underline
