--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -26,10 +26,18 @@
 
     /* Footer */
     footer
+        .logo
+            width: calc(50% - 20px)
+            float: left
+            margin: 0 5px
         .copyright
-            margin-top: 20px
+            width: calc(50% - 20px)
+            float: left
+            margin: 20px 5px 0
         .social-links
-            margin: 20px 0 10px
+            width: calc(50% - 20px)
+            float: left
+            margin: 20px 5px 10px
         .title
             margin: 15px 0 15px
     /* */
