--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -154,17 +154,25 @@ ul.horisontal
             margin-right: 0
 
 // Text
+.fixed-right         // parent container must has "position: relative"
+    position: absolute
+    right: 0
+.fixed-left          // parent container must has "position: relative"
+    position: absolute
+    left: 0
+
 p
     margin: 0 0 20px
-    &:last-child
-        margin-bottom: 0
 .small
-    font-size: em(12px)
+    font-size: em(12px) !important
     margin-bottom: 12px
 .without-enter
     white-space: nowrap
 .align-center
     text-align: center
+
+.text
+    text-align: justify
 
 .help-text
     color: $dark-gray-color
@@ -193,6 +201,7 @@ i, .fa
     color: $gray-color
     margin-right: 7px
     &.pull-right
+    &.pull-right
         margin-right: 0
         margin-left: 7px
 a
@@ -206,6 +215,8 @@ i:only-child, .fa:only-child
     margin-top: 20px
 .m-b-20
     margin-bottom: 20px
+.m-b-30
+    margin-bottom: 30px
 .m-l-5
     margin-left: 5px
 .m-l-30
@@ -235,7 +246,10 @@ section
     border-top: 1px solid #eeeeee
     border-bottom: 1px solid #ffffff
     display: inline-block
+    float: left
     width: 100%
+    &.delimiter-2x
+        border-width: 2px
 
 // Menus
 .menu
