Главная страница (блог статей)

--- a/app/header.sass
+++ b/app/header.sass
@@ -336,3 +336,6 @@
     a
         color: $dark-color
         text-decoration: underline
+        &:hover
+            color: $accent-color
+            text-decoration: none
