Контактная страница (разметка без стилей).

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -288,6 +288,7 @@ input, textarea
     border-radius: 2px
     padding: 0 10px
     font-family: $title-font
+    width: 100%
 
 .input-group, .form-group
     margin-bottom: 20px
