Правая колонка (разметка, сттили не доделаны).

--- a/app/header.sass
+++ b/app/header.sass
@@ -311,6 +311,7 @@
             height: 30px
             font-size: em(18px)
             border-bottom: 1px solid $gray-color
+            box-shadow: none
             padding-right: 3px
             &:hover, &:focus, &:active,
             &:hover ~ button, &:focus ~ button, &:active ~ button
