--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -68,13 +68,17 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a,
     text-decoration: none
     &:hover, &:focus, &:active
         color: $accent-color
+.sidebar
+    h1, h2, h3, h4, h5, h6,
+    .h1, .h2, .h3, .h4, .h5, .h6
+        color: $dark-gray-color
 
 // Links
 a
     color: $accent-color
     text-decoration: underline
 
-    &:hover, &:focus
+    &:hover, &:focus, &.active
         color: $accent-color
         text-decoration: none
 
