Мелкие стили (неправильные стили).

--- a/app/header.sass
+++ b/app/header.sass
@@ -9,7 +9,6 @@
     padding: 0
     line-height: 50px
     font-size: em(14px)
-
     ul
         height: 50px
         li
@@ -267,6 +266,8 @@
                 text-decoration: none
                 &:hover
                     color: $accent-color
+                span
+                    text-decoration: none
             // submenu
             ul
                 display: none
