--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -183,8 +183,10 @@ p
 .align-center
     text-align: center
 
-.text
-    text-align: justify
+.text // all text
+    text-align: left
+//.sidebar .text // all text
+//    text-align: left
 
 .help-text
     color: $dark-gray-color
@@ -246,6 +248,7 @@ i:only-child, .fa:only-child
 
 // Sections
 section
+    display: inline-block
     padding: 25px
     margin-bottom: 30px
 .dark-section
