--- a/app/header.sass
+++ b/app/header.sass
@@ -13,6 +13,7 @@
         height: 50px
         li
             display: inline-block
+            float: left
             margin-right: 25px
             span
                 float: left
@@ -210,16 +211,17 @@
     .logo
         margin: 20px 0
     h1
-        margin-top: 30px
+        margin-top: 28px
         float: left
         .slogan
-            margin-top: 15px
+            margin-top: 10px
             display: block
-            font-size: 18px
+            font-size: 0.5em
+            line-height: 1.2
             opacity: 0.8
 
     .contact-menu
-        margin-top: 40px
+        margin-top: 35px
     .social-links
         margin-top: 30px
 
@@ -234,6 +236,7 @@
 
 // Main Menu
 .menu-section
+    position: relative
     display: inline-block
     width: 100%
     background: linear-gradient(to top, $light-gradient-colors)
@@ -274,7 +277,7 @@
                 position: absolute
                 z-index: 999
                 top: 54px
-                margin-left: -20px
+                margin-left: -15px
                 background: linear-gradient(to bottom, $light-gradient-colors)
                 border-radius: 0 0 2px 2px
                 border: 1px solid #f9f9f9
@@ -298,9 +301,11 @@
                 color: $accent-color
 
 
-    // search
     .search-form
-        margin: 10px 20px 0 0
+        width: 280px
+        position: absolute
+        right: 20px
+        margin: 10px 0 0 0
         .input-group
             margin-bottom: 0
         input, button
@@ -309,14 +314,21 @@
             opacity: 0.5
             float: left
         input
+            width: 60px
+            float: right
+            @include transition(1s)
             height: 30px
             font-size: em(18px)
-            border-bottom: 1px solid $gray-color
             box-shadow: none
-            padding-right: 3px
+            padding: 0 10px 0 2px
+            cursor: pointer
             &:hover, &:focus, &:active,
             &:hover ~ button, &:focus ~ button, &:active ~ button
                 opacity: 1
+            &:focus
+                width: 250px
+                border-bottom: 1px solid $gray-color
+                cursor: pointer
         button
             padding: 0
             height: 30px
