Адаптивность футера для SM, XS.

--- a/app/header.sass
+++ b/app/header.sass
@@ -334,6 +334,11 @@
             height: 30px
             i, .fa
                 font-size: 30px
+
+// mobile menu
+#menu
+    display: none
+
 // End Main Menu
 
 // Breadcrumbs
