--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -66,7 +66,16 @@
 @media only screen and (max-width : 991px)
     .align-center-sm
         text-align: center
-    /* */
+
+    /* Footer */
+    footer
+        .copyright
+            margin-top: 0
+        .social-links
+            margin: 20px 5px 0
+        .title
+            margin: 20px 0 15px
+/* */
 
 /* Small Devices, Tablets - XS - для 767 и менее */
 @media only screen and (max-width : 767px)
@@ -74,25 +83,13 @@
         text-align: center
 
     /* Footer */
-    footer
-        .logo
-            width: calc(50% - 20px)
-            float: left
-            margin: 0 5px
-        .copyright
-            width: calc(50% - 20px)
-            float: left
-            margin: 20px 5px 0
-        .social-links
-            width: calc(50% - 20px)
-            float: left
-            margin: 20px 5px 10px
-        .title
-            margin: 15px 0 15px
     /* */
 
 /* Extra Small Devices, Phones - XS - для 480 и менее */
 @media only screen and (max-width : 480px)
+    .full-xxs
+        width: 100%
+
     #header-widget
         .user-panel
             .button
@@ -127,6 +124,10 @@
         .social-links
             margin: 20px 0
 
+    /* Footer */
+    footer
+        .copyright
+            margin-top: 20px
     /* */
 
 /* Custom, iPhone Retina - XS - для 320 и менее */
