Кнопка поиска для XS, SM.

--- a/app/header.sass
+++ b/app/header.sass
@@ -304,6 +304,7 @@
     .search-form
         width: 280px
         position: absolute
+        z-index: 10
         right: 20px
         margin: 10px 0 0 0
         .input-group
@@ -338,6 +339,18 @@
 // mobile menu
 #menu
     display: none
+.mobile-buttons-menu
+    margin-top: 20px
+    button
+        display: inline-block
+        width: 100%
+        margin-bottom: 10px
+        *
+            float: left
+            line-height: 32px
+            color: $gray-color
+        i, .fa
+            margin: 0 0 0 10px
 
 // End Main Menu
 
