--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -40,13 +40,6 @@ body
         position: absolute
         top: 7px
         right: 10px
-        svg
-            width: 30px
-            .close-x
-                stroke: $gray-color
-                fill: transparent
-                stroke-linecap: round
-                stroke-width: 4
     .title
         display: inline-block
         width: 100%
@@ -452,7 +445,8 @@ body
 footer
     padding: 30px 0 50px 0
     color: $gray-color !important
-
+    .first-column
+        margin-left: 25px
     .copyright
         color: $gray-color
         font-size: em(14px)
@@ -469,5 +463,30 @@ footer
             color: #ffffff
 
 // End Footer
+
+// Mobile Popups
+.mobile-popup
+    display: table
+    position: fixed
+    top: 0
+    left: 0
+    width: 100vw
+    height: 100vh
+    background-color: rgba(255, 255, 255, 0.99)
+    transition: all 0.5s ease-in-out
+    transform: translate(0px, -100%) scale(0, 0)
+    opacity: 0
+    &.open
+        transform: translate(0px, 0px) scale(1, 1)
+        opacity: 1
+    .popup-close-button
+        position: absolute
+        top: 7px
+        right: 10px
+    .popup-header,
+    .popup-content
+        display: table-row
+        vertical-align: middle
+
 
 @import "media"
